--- a/Nova StarBase/platformio.ini
+++ b/Nova StarBase/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:nova_starbase]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -22,7 +22,7 @@ lib_deps =
     adafruit/Adafruit MCP23017 Arduino Library@^2.3.0
 ;    adafruit/Adafruit MCP23017 Arduino Library@^2.0.0
 ;    https://github.com/mc-hamster/Adafruit-MCP23017-Arduino-Library
-    https://github.com/meshtastic/ArduinoThread.git#72921ac222eed6f526ba1682023cee290d9aa1b3
+;    https://github.com/meshtastic/ArduinoThread.git#72921ac222eed6f526ba1682023cee290d9aa1b3
     adafruit/Adafruit BusIO@^1.14.1
     SPI
     Wire
