--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+.pio
+
+# ignore vscode IDE settings files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/extensions.json
+*.code-workspace
+
+
 # Prerequisites
 *.d
 
@@ -53,3 +63,4 @@
 hardware/star/star.pro
 hardware/star/star.pro
 *.pro
+
