Add: DMX Thread, Protos, NovaIO and NovaNet

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,12 @@ monitor_speed = 921600
 
 
 build_flags = -DUSE_THREAD_NAMES
+    -Wno-missing-field-initializers
+    -Wno-format
+    -Isrc
+    -Isrc/net
+    -Isrc/net/generated
+    -Isrc/net/nanopb
 
 lib_deps = 
 ;    https://github.com/me-no-dev/ESPAsyncWebServer.git
@@ -28,4 +34,5 @@ lib_deps =
     Wire
     FastLED@^3.6.0
     someweisguy/esp_dmx
+    https://github.com/mc-hamster/nanopb-arduino
 
