add esp32 backtrace decoder

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 921600
+monitor_filters = time, default, esp32_exception_decoder
+build_type = debug
 
 
 build_flags = -DUSE_THREAD_NAMES
