--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,8 @@ hardware/star/star.pro
 *.dblite
 *.dblite
 *.dblite
+*.checksum
+.pio/build/nova_starbase/.sconsign39.dblite
+.pio/build/nova_starbase/firmware.bin
+.pio/build/nova_starbase/firmware.elf
+.pio/build/nova_starbase/firmware.map
